src/snapshots/afrotd__parser__tests__rule_html_2.30.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.30.3 Scrimmage Kick-Spiel
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Scrimmage Kick-Spiel ist die Aktion im Zeitraum vom Snap
                bis zu dem Moment, in dem ein Scrimmage Kick in den Besitz
                eines Spielers gelangt oder gemäß der Regel für dead erklärt
                wird.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.30.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
