src/snapshots/afrotd__parser__tests__rule_html_2.31.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.31.3 Endzonen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Die Endzone an jedem Ende des Feldes ist die rechteckige
                Zone, die durch die Goalline, die Seitenlinien und die Endlinie
                gebildet wird.
                </li>
                <li>Die Goalline-Pylone und die Goalline befinden sich in der
                Endzone.
                </li>
                <li>Die Endzone eines Teams ist die, die es verteidigt (A.R.
                8.5.1.VII und 8.6.1.I).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.31.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
