src/snapshots/afrotd__parser__tests__rule_html_2.32.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.32.1 Schlägerei
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Schlägerei ist jeder Versuch einer Person, die den Regeln
                unterliegt, einen Gegner in kämpferischer Art und Weise
                anzugreifen, die untypisch für den Football-Sport ist. Solche
                Aktionen beinhalten, sind jedoch nicht auf die folgenden
                Tätigkeiten beschränkt:
            </p>
            <ol type="a">
                <li>der Versuch, einen Gegner mit dem (den) Arm(en), der (den)
                Hand (Händen), dem (den) Bein(en) oder dem (den) Fuß (Füßen) zu
                treffen, egal ob es zum Kontakt kommt oder nicht.
                </li>
                <li>eine unsportliche Aktion gegen einen Gegner, die
                irgendeinen Gegner dazu bringt, dass er sich durch eine
                Schlägerei rächt (Regel 9.2.1 und 9.5.1).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.32.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
