src/snapshots/afrotd__parser__tests__rule_html_2.33.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.33.1 Drei-und-Eins-Prinzip
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Das Drei-und-Eins-Prinzip für die Strafdurchführung trifft zu,
                wenn die Strafandrohung für ein Foul keinen speziellen
                Enforcement Spot vorgibt. Die Anwendung dieses Prinzips wird in
                Regel 10.2.2.c beschrieben.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.33.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
