src/snapshots/afrotd__parser__tests__rule_html_2.34.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.34.1 Tackle Box
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Die Tackle Box ist die rechteckige Zone, die von der
                neutralen Zone, den beiden Linien, die sich jeweils parallel zu
                den Seitenlinien fünf Meter vom Snapper entfernt erstrecken,
                und Team A’s Endlinie gebildet wird (siehe Anhang A).
                </li>
                <li>Die Tackle Box ist aufgehoben, sobald der Ball die Zone
                erstmals verlassen hat. Regel 3 Perioden, Zeitfaktoren,
                Ersatzspieler
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.34.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
